apply code style